# AI_system

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  prompt.md
accelerators/tpu_mlir/: README.md
capstone/: README.md
cmake/: CudaArchitectures.cmake  ProjectOptions.cmake
compilers/mlir/: README.md
compilers/tvm/: README.md
docs/: gpu-targets.md  learning-roadmap.md
docs/profiling/: nsight-tools.md
docs/profiling/gemm/: README.md
docs/profiling/hgemm/: README.md  ubuntu-22.04-rtx4090d.md
docs/reports/: gemm-e2e-vs-kernel-only-2026-04-17.md
docs/sass/: cuobjdump.md  nvdisasm.md
edge/rk3588/: README.md
include/ai_system/: config.hpp.in
include/ai_system/benchmark/: benchmark_report.hpp  benchmark_runner.hpp
include/ai_system/cuda/: runtime.hpp
include/ai_system/kernels/: basic_kernels.hpp
include/ai_system/plan/: learning_plan.hpp
include/ai_system/profiling/: nvtx.hpp
include/ai_system/runtime/: gpu_info.hpp
integrations/pytorch/: README.md
labs/cute/: CMakeLists.txt  README.md
labs/cute/examples/: README.md  cute_layout_algebra_demo.cu  cute_layout_mapping.cu  cute_tensor_tile_demo.cu
labs/cute/notes/: README.md  learning-plan.md  tensor-local-tile-partition.md  windows-linux-build.md
labs/cute/reports/: README.md
labs/cute/scripts/: README.md  build.ps1  build.sh  check_env.ps1  check_env.sh  configure.ps1  configure.sh
labs/cutlass/: CMakeLists.txt  README.md
labs/cutlass/benchmarks/: README.md
labs/cutlass/examples/: README.md  cutlass_header_probe.cu
labs/cutlass/notes/: README.md  gpu-targets.md  learning-plan.md  windows-linux-build.md
labs/cutlass/reports/: README.md
labs/cutlass/scripts/: README.md  build.ps1  build.sh  build_official_cutlass.ps1  build_official_cutlass.sh  check_env.ps1  check_env.sh  configure.ps1  configure.sh  configure_official_cutlass.ps1  configure_official_cutlass.sh  run_profiler.ps1  run_profiler.sh
labs/flash_attention/: README.md
labs/gemm/: CMakeLists.txt  README.md  gemm_dbuffer_vload.cu  gemm_lab.cpp  gemm_lab.cu  gemm_lab.hpp  gemm_lab_kernels.hpp  gemm_wrap_tile.cu  sgemm_benchmark_lab.cpp  sgemm_v1.cu  sgemm_v3.cu  tiled_gemm_block.cu  tiled_gemm_register.cu  tiled_gemm_v1.cu  tiled_gemm_v1_lab.cpp
labs/hgemm/: CMakeLists.txt  README.md  hgemm_benchmark_lab.cpp  hgemm_lab.cpp  hgemm_lab.cu  hgemm_lab.hpp  hgemm_mma_basic.cu  hgemm_mma_stage_tn_cute.cu  hgemm_wmma_basic.cu
labs/perf_engineering/: CMakeLists.txt  README.md  perf_engineering_lab.cpp
labs/triton/: PLAN.md  README.md  requirements.txt
labs/triton/benchmarks/: README.md
labs/triton/handwrite/: 01_vector_add.py  02_fused_softmax.py  03_matrix_multiplication.py  12_RMSNorm.py  matmul.hatchet
labs/triton/notes/: README.md  flash-attention-v2.md  fused-attention.md  online-softmax.md  program-id-mapping.md
labs/triton/python/: README.md
labs/triton/python/triton_playground/: __init__.py
labs/triton/python/triton_playground/benchmarking/: __init__.py
labs/triton/python/triton_playground/kernels/: __init__.py  attention_forward.py  dropout.py  flash_attention_v2.py  fused_attention.py  fused_softmax.py  grouped_gemm.py  layer_norm.py  matmul.py  matmul_bias_silu.py  online_softmax.py  persistent_matmul.py  rms_norm.py  vector_add.py
labs/triton/python/triton_playground/ops/: __init__.py  attention_forward.py  dropout.py  flash_attention_v2.py  fused_attention.py  fused_softmax.py  grouped_gemm.py  layer_norm.py  matmul.py  matmul_bias_silu.py  online_softmax.py  persistent_matmul.py  rms_norm.py  softmax_baselines.py  vector_add.py
labs/triton/python/triton_playground/testing/: __init__.py
labs/triton/reports/: README.md  w09-summary.md  w10-matmul-autotune.md  w12-dropout.md  w12-fused-ops.md  w13-online-softmax.md  w14-attention-primitives-v0.1.md  w14-flash-attention-v2.md
labs/triton/scripts/: README.md  bench_attention_forward.py  bench_dropout.py  bench_flash_attention_v2.py  bench_fused_attention.py  bench_fused_softmax.py  bench_grouped_gemm.py  bench_layer_norm.py  bench_matmul.py  bench_matmul_bias_silu.py  bench_online_softmax.py  bench_persistent_matmul.py  bench_rms_norm.py  bench_vector_add.py  bench_w12_fused_ops.py  plot_w09_benchmarks.py
labs/triton/tests/: README.md  conftest.py  test_attention_forward.py  test_dropout.py  test_flash_attention_v2.py  test_fused_attention.py  test_fused_softmax.py  test_grouped_gemm.py  test_layer_norm.py  test_matmul.py  test_matmul_bias_silu.py  test_online_softmax.py  test_persistent_matmul.py  test_rms_norm.py  test_vector_add.py
scripts/: build.ps1  build.sh  configure.ps1  configure.sh  profile_ncu.ps1  profile_ncu.sh  profile_nsys.ps1  profile_nsys.sh
src/app/: main.cpp
src/benchmark/: benchmark_report.cpp  benchmark_runner.cpp
src/kernels/: basic_kernels.cpp  basic_kernels.cu
src/plan/: learning_plan.cpp
src/runtime/: gpu_info.cpp
tests/: CMakeLists.txt  smoke_tests.cpp
tools/: export_plan.py
